--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/analytics": "^1.1.1",
+    "06-portfolio": "file:",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.1",
     "cors": "^2.8.5",
